<resources>
    <string name="app_name">ShippingCostCalculator2App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="weightLBL">Weight of the package</string>
    <string name="ouncesLBL">(in ounces)</string>
    <string name="baseLBL">Base Cost:</string>
    <string name="addCostLBL">Added Cost:</string>
    <string name="totalLBL">Total Shipping Cost:</string>
    <string name="zeroDec">$0.00</string>
    <string name="zero">0</string>
</resources>
