<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shippingbck">

    <!-- WEIGHT INPUT SECTION -->

    <!-- WEIGHT INPUT EDIT TEXT FIELD RECEIVES FOCUS -->


    <TextView
        android:id="@+id/textView1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:gravity="center_horizontal"
        android:text="@string/weightLBL"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintEnd_toStartOf="@+id/relativeLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ouncesLBL"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1"
        app:layout_constraintVertical_bias="0.134" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="289dp"
        android:layout_height="242dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/paper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <!-- TEXTVIEWS FOR BASE COST LABEL AND COMPUTATION  -->
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/output_margin_buffer"
            android:text="@string/baseLBL"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignParentRight="true"
            android:paddingRight="@dimen/output_margin_buffer"
            android:text="@string/zeroDec"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!-- TEXTVIEWS FOR ADDED COST LABEL AND COMPUTATION  -->
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp"
            android:paddingLeft="@dimen/output_margin_buffer"
            android:text="@string/addCostLBL"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView5"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignParentRight="true"
            android:paddingRight="@dimen/output_margin_buffer"
            android:text="@string/zeroDec"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <!-- TEXTVIEWS FOR THE TOTAL COST LABEL AND COMPUTATION  -->
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp"
            android:paddingLeft="@dimen/output_margin_buffer"
            android:text="@string/totalLBL"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView7"
            android:layout_alignBottom="@+id/textView7"
            android:layout_alignParentRight="true"
            android:paddingRight="@dimen/output_margin_buffer"
            android:text="@string/zeroDec"
            android:textAppearance="?android:attr/textAppearanceMedium" />


    </RelativeLayout>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="321dp"
        android:layout_height="93dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/zero"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@+id/relativeLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textView1">

        <requestFocus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </EditText>


</androidx.constraintlayout.widget.ConstraintLayout>